# stochasticthermo

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_stochasticthermo.py  tests.py
stochasticthermo/: __init__.py  code.py  epr.py  linalg.py  ratematrix.py
